export const snapshot = {};

snapshot[`Document Update Command - Help Text 1`] = `
stdout:
"
Usage: update <documentId>

Description:

  Update an existing document

Options:

  -h, --help                     - Show this help.                              
  -t, --title         <title>    - New title for the document                   
  -c, --content       <content>  - New markdown content (inline)                
  -f, --content-file  <path>     - Read new content from file                   
  --icon              <icon>     - New icon (emoji)                             
  -e, --edit                     - Open current content in \$EDITOR for editing  
  --no-color                     - Disable colored output                       

"
stderr:
""
`;

snapshot[`Document Update Command - Update Title 1`] = `
stdout:
"✓ Updated document: New Title
https://linear.app/test/document/new-title-d4b93e3b2695
"
stderr:
""
`;

snapshot[`Document Update Command - Update Content 1`] = `
stdout:
"✓ Updated document: Delegation System Spec
https://linear.app/test/document/delegation-system-spec-d4b93e3b2695
"
stderr:
""
`;

snapshot[`Document Update Command - Update Multiple Fields 1`] = `
stdout:
"✓ Updated document: Updated Title
https://linear.app/test/document/updated-title-d4b93e3b2695
"
stderr:
""
`;

snapshot[`Document Update Command - Document Not Found 1`] = `
stdout:
""
stderr:
'Failed to update document: Error: Document not found: nonexistent123: {"response":{"errors":[{"message":"Document not found: nonexistent123","extensions":{"code":"NOT_FOUND"}}],"status":200,"headers":{}},"request":{"query":"mutation UpdateDocument(\$id: String!, \$input: DocumentUpdateInput!) {\\\\n  documentUpdate(id: \$id, input: \$input) {\\\\n    success\\\\n    document {\\\\n      id\\\\n      slugId\\\\n      title\\\\n      url\\\\n      updatedAt\\\\n    }\\\\n  }\\\\n}","variables":{"id":"nonexistent123","input":{"title":"New Title"}}}}
    at runRequest (file:///Users/samgbafa/Library/Caches/deno/npm/registry.npmjs.org/graphql-request/7.2.0/src/legacy/helpers/runRequest.ts:105:12)
    at eventLoopTick (ext:core/01_core.js:187:7)
    at async GraphQLClient.request (file:///Users/samgbafa/Library/Caches/deno/npm/registry.npmjs.org/graphql-request/7.2.0/src/legacy/classes/GraphQLClient.ts:131:22)
    at async Command.actionHandler (file:///Users/samgbafa/Documents/github/tinycloud/development/external/linear-cli/src/commands/document/document-update.ts:225:24)
    at async Command.execute (https://jsr.io/@cliffy/command/1.0.0-rc.8/command.ts:1940:7)
    at async Command.parseCommand (https://jsr.io/@cliffy/command/1.0.0-rc.8/command.ts:1772:14)
    at async Object.fn (file:///Users/samgbafa/Documents/github/tinycloud/development/external/linear-cli/test/commands/document/document-update.test.ts:206:7)
    at async runTest (https://jsr.io/@cliffy/testing/1.0.0-rc.8/snapshot.ts:263:5)
    at async snapshotTest (https://jsr.io/@cliffy/testing/1.0.0-rc.8/snapshot.ts:112:5)
    at async file:///Users/samgbafa/Documents/github/tinycloud/development/external/linear-cli/test/commands/document/document-update.test.ts:175:1 {
  response: {
    data: undefined,
    errors: [
      {
        message: "Document not found: nonexistent123",
        extensions: { code: "NOT_FOUND" }
      }
    ],
    extensions: undefined,
    status: 200,
    headers: Headers {
      "access-control-allow-origin": "*",
      "content-type": "application/json",
      date: "Mon, 01 Jan 2024 00:00:00 GMT",
      vary: "Accept-Encoding"
    }
  },
  request: {
    query: "mutation UpdateDocument(\$id: String!, \$input: DocumentUpdateInput!) {\\\\n" +
      "  documentUpdate(id: \$id, input: \$input) {\\\\n" +
      "    success\\\\n" +
      "    document {\\\\n" +
      "      id\\\\n" +
      "      slugId\\\\n" +
      "      title\\\\n" +
      "      url\\\\n" +
      "      updatedAt\\\\n" +
      "    }\\\\n" +
      "  }\\\\n" +
      "}",
    variables: { id: "nonexistent123", input: { title: "New Title" } }
  }
}
'
`;

snapshot[`Document Update Command - No Fields Provided 1`] = `
stdout:
""
stderr:
"No update fields provided. Use --title, --content, --content-file, --icon, or --edit.
"
`;

snapshot[`Document Update Command - Permission Error 1`] = `
stdout:
""
stderr:
\`Failed to update document: Error: You don't have permission to update this document: {"response":{"errors":[{"message":"You don't have permission to update this document","extensions":{"code":"FORBIDDEN"}}],"status":200,"headers":{}},"request":{"query":"mutation UpdateDocument(\$id: String!, \$input: DocumentUpdateInput!) {\\\\n  documentUpdate(id: \$id, input: \$input) {\\\\n    success\\\\n    document {\\\\n      id\\\\n      slugId\\\\n      title\\\\n      url\\\\n      updatedAt\\\\n    }\\\\n  }\\\\n}","variables":{"id":"d4b93e3b2695","input":{"title":"Unauthorized Update"}}}}
    at runRequest (file:///Users/samgbafa/Library/Caches/deno/npm/registry.npmjs.org/graphql-request/7.2.0/src/legacy/helpers/runRequest.ts:105:12)
    at eventLoopTick (ext:core/01_core.js:187:7)
    at async GraphQLClient.request (file:///Users/samgbafa/Library/Caches/deno/npm/registry.npmjs.org/graphql-request/7.2.0/src/legacy/classes/GraphQLClient.ts:131:22)
    at async Command.actionHandler (file:///Users/samgbafa/Documents/github/tinycloud/development/external/linear-cli/src/commands/document/document-update.ts:225:24)
    at async Command.execute (https://jsr.io/@cliffy/command/1.0.0-rc.8/command.ts:1940:7)
    at async Command.parseCommand (https://jsr.io/@cliffy/command/1.0.0-rc.8/command.ts:1772:14)
    at async Object.fn (file:///Users/samgbafa/Documents/github/tinycloud/development/external/linear-cli/test/commands/document/document-update.test.ts:260:7)
    at async runTest (https://jsr.io/@cliffy/testing/1.0.0-rc.8/snapshot.ts:263:5)
    at async snapshotTest (https://jsr.io/@cliffy/testing/1.0.0-rc.8/snapshot.ts:112:5)
    at async file:///Users/samgbafa/Documents/github/tinycloud/development/external/linear-cli/test/commands/document/document-update.test.ts:229:1 {
  response: {
    data: undefined,
    errors: [
      {
        message: "You don't have permission to update this document",
        extensions: { code: "FORBIDDEN" }
      }
    ],
    extensions: undefined,
    status: 200,
    headers: Headers {
      "access-control-allow-origin": "*",
      "content-type": "application/json",
      date: "Mon, 01 Jan 2024 00:00:00 GMT",
      vary: "Accept-Encoding"
    }
  },
  request: {
    query: "mutation UpdateDocument(\$id: String!, \$input: DocumentUpdateInput!) {\\\\n" +
      "  documentUpdate(id: \$id, input: \$input) {\\\\n" +
      "    success\\\\n" +
      "    document {\\\\n" +
      "      id\\\\n" +
      "      slugId\\\\n" +
      "      title\\\\n" +
      "      url\\\\n" +
      "      updatedAt\\\\n" +
      "    }\\\\n" +
      "  }\\\\n" +
      "}",
    variables: { id: "d4b93e3b2695", input: { title: "Unauthorized Update" } }
  }
}
\`
`;
